--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -823,6 +823,7 @@ header {
 
 .toolbox {
     //display: flex;
+    overflow-x: hidden;
 
     .one {
         margin-left: 2rem;
@@ -841,8 +842,6 @@ header {
         }
         
         nav {
-            width: 100%;
-
             .nav-link {
                 color: black;
                 padding-top: 0;
